<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="edit_text_search">put the amount of food and what food</string>
    <string name="quantity">quantity</string>
    <string name="search">Search</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="calories">Calories</string>
    <string name="adicionar">Adicionar</string>
    <string name="submit">Submit</string>
</resources>