<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.joaoflaviofreitas.dietplan.feature.search.SearchFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/edit_text_search" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_layout">

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/oz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Oz" />

            <RadioButton
                android:id="@+id/lb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lb" />

            <RadioButton
                android:id="@+id/kg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Kg" />
        </RadioGroup>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/linear"
        app:layout_constraintTop_toTopOf="@id/linear">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/quantity_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/quantity" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="30dp"
        android:text="@string/search"
        app:layout_constraintTop_toBottomOf="@id/linear" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/material_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/search_btn">




        <TextView

            android:id="@+id/protein_food"
            style="@style/DialogOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/protein"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            app:layout_constraintEnd_toEndOf="@id/protein_food"
            android:id="@+id/protein_count"
            style="@style/DialogOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/protein_food"
            app:layout_constraintTop_toBottomOf="@id/protein_food" />

        <TextView
            android:id="@+id/carb_food"
            style="@style/DialogOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Carb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            app:layout_constraintEnd_toEndOf="@id/carb_food"
            android:id="@+id/carb_count"
            style="@style/DialogOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/carb_food"
            app:layout_constraintTop_toBottomOf="@id/carb_food" />

        <TextView
            android:id="@+id/fat_food"
            style="@style/DialogOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="25dp"/>

        <TextView

            android:id="@+id/fat_count"
            style="@style/DialogOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/fat_food"
            app:layout_constraintEnd_toEndOf="@id/fat_food"
            app:layout_constraintTop_toBottomOf="@id/fat_food" />

        <TextView
            android:id="@+id/calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calories"
            style="@style/DialogOptions"
            app:layout_constraintTop_toBottomOf="@id/carb_count"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/calories_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DialogOptions"
            app:layout_constraintTop_toBottomOf="@id/calories"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/material_2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        app:cardElevation="20dp"
        app:layout_constraintTop_toBottomOf="@id/material_1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/food_name"
                style="@style/DialogOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:gravity="center"
                android:text="Quanto falta"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/protein"
                style="@style/DialogOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/protein"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/food_name" />

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progress_1"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toBottomOf="@id/protein"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/protein" />

            <TextView
                android:id="@+id/carb"
                style="@style/DialogOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                android:text="Carbohidrate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/protein" />

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progress_2"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toBottomOf="@id/carb"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/carb" />

            <TextView
                android:id="@+id/fat"
                style="@style/DialogOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/fat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/carb" />

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progress_3"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toBottomOf="@id/fat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/fat" />
            <TextView
                android:id="@+id/calorie"
                style="@style/DialogOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/calories"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fat" />

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progress_4"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toBottomOf="@id/calorie"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/calorie" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/adicionar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/material_2" />

</androidx.constraintlayout.widget.ConstraintLayout>